# grian-horizon-plugin

./: .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
components/time_chart/: chart.css  chart.html  chart.js
grian_horizon_plugin/api/: metrics.py
grian_horizon_plugin/content/drinks/: panel.py  urls.py  views.py
grian_horizon_plugin/content/metrics/: panel.py  urls.py  views.py
grian_horizon_plugin/enabled/: _90_project_metrics_panelgroup.py  _91_project_metrics_metrics_panel.py
grian_horizon_plugin/local/local_settings.d/: _90_grian.py
grian_horizon_plugin/static/components/time_chart/: chart.css  chart.html  chart.js
grian_horizon_plugin/static/components/toggle-switch/: index.html  toggle-switch.css
grian_horizon_plugin/templates/metrics/: index.html
grian_horizon_plugin/templates/metrics/partials/: hypervisor-summary.html  time-chart.html
